# fast-api-jaffle-shop

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  test.yml
app/: const.py  db.py  main.py  models.py  routers.py
tests/: test_dlt_extraction.py  test_routers.py  utils.py
