[project]
name = "fast-api-jaffle-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "duckdb>=1.2.1",
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.3.5",
    "dlt==1.8.1",
    "pyarrow>=16.0.0",
]
